--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="parte2">
         <section class="tabla-libros">
-            <h4 class="datos-libros">Datos sobre los Libros</h4>
+            <h4>Datos sobre los Libros</h4>
             <table class="tabla">
                 <thead>
                     <tr>
